[gd_scene load_steps=2 format=3 uid="uid://cnc5wjy3jh1f5"]

[ext_resource type="Script" path="res://Scenes/UI/CardsUI/CardContainer/card_container.gd" id="1_qaeou"]

[node name="CardContainer" type="PanelContainer"]
custom_minimum_size = Vector2(200, 320)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 88.0
offset_top = 56.0
offset_right = -1657.0
offset_bottom = -744.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_qaeou")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EnergyCost" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "1"

[node name="CardName" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Attack"

[node name="CardImage" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(175, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CardDescription" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 11
text = "Example Description"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
